--- a/Source/static/css/simple_run.css
+++ b/Source/static/css/simple_run.css
@@ -34,7 +34,7 @@ table {
     font-size: .8rem;
 }
 
-td:hover{
+td:hover {
     background-color: #17ebce;
 }
 
@@ -46,7 +46,67 @@ td:hover{
     overflow: scroll;
 }
 
-
 #drill_down_table_div {
     overflow: scroll;
+}
+
+.run-select-card-body,
+.function-select-card-body {
+    background-color: whitesmoke;
+}
+
+.run-select-card-header,
+.function-select-card-header {
+    background-color: white;
+}
+
+.draggble_list_div {
+    overflow: hidden;
+    overflow-y: scroll;
+}
+
+.draggble_list_div li .row {
+    padding: 5px 20px 5px 20px;
+}
+
+.draggble_list_div li label {
+    margin-bottom: 0px;
+}
+
+.run-select-card-body .draggble_list_div {
+    height: 310px;
+}
+
+.function-select-card-body .draggble_list_div {
+    height: 400px;
+}
+
+.draggble_list_div button {
+    border: none;
+    border-radius: 100%;
+}
+
+.function {
+    background-color: #01a9b4;
+}
+
+.group {
+    background-color: gold;
+}
+
+.run_id {
+    background-color: white;
+}
+
+.card {
+    border-color: blue;
+    border-width: 2px;
+}
+
+.dropdown-selected {
+    background-color: #0779e4;
+}
+
+.dropdown-selected:hover {
+    background-color: #0779e4;
 }
