--- a/Source/templates/run_simple.html
+++ b/Source/templates/run_simple.html
@@ -5,7 +5,7 @@
 <div dir="ltr" class="row col-12" id=main_form>
     <div class="card run-select-card">
         <div class="card-header run-select-card-header">
-            <h2>Select Runs</h2>
+            <h2>Runs</h2>
         </div>
         <div class="card-body run-select-card-body">
 
@@ -37,7 +37,7 @@
     </div>
     <div class="card function-select-card mx-4">
         <div class="card-header function-select-card-header">
-            <h2>Select Functions</h2>
+            <h2>Functions</h2>
         </div>
         <div class="card-body function-select-card-body">
 
@@ -68,80 +68,82 @@
             </div>
         </div>
     </div>
-    <button id="go_button" class="btn btn-primary btn-lg m-4">GO!</button>
-
-
-
-
-    <!-- </center> -->
-    <hr>
-    <br>
-    <br>
-    <div class="col-5 mx-4">
-        <label for="mission_id">select mission id:</label>
-        <div class="row ml-auto">
-            <div>
-                <select class="form-control" id="mission_id_select"></select>
-            </div>
-            <div>
-                <button class="btn btn-lg btn-success ml-1" id='display_button'>display</button>
+    <div class="display-results-div">
+        <div class="">
+            <label for="mission_id">select mission id:</label>
+            <div class="row ml-auto">
+                <div>
+                    <select class="form-control" id="mission_id_select"></select>
+                </div>
+                <div>
+                    <button class="btn btn-lg btn-success ml-1" id='display_button'>display</button>
+                </div>
             </div>
         </div>
-    </div>
 
-    <hr />
-    <div class="row container-fluid mx-auto">
-        <div id="results_table_div" class="mr-auto col-6">
-            <table id="results_table">
-            </table>
+        <hr />
+        <!-- <div class="mx-auto"> -->
+
+        <div class="results_statistics_div">
+            <div class="container-fluid">
+                <canvas hidden="hidden" id="results_statistics_chart"></canvas>
+            </div>
         </div>
-        <div class="container-fluid col-6 ml-auto mt-auto">
-            <canvas hidden="hidden" id="results_statistics_chart"></canvas>
-        </div>
+        <!-- </div> -->
     </div>
     <br>
     <br>
-    <div id="drill_down_div" class="container results_divs">
+
+</div>
+<button id="go_button" class="btn btn-primary btn-lg m-4">GO!</button>
+<div id="results_table_div" class="mr-auto">
+    <table id="results_table">
+    </table>
+</div>
+<div class="row m-3">
+    <div id="drill_down_div" class="col-4">
         <div class="row">
-            <div class="col-6">
+            <div class="result-output-text">
 
                 <h1 id="drill_down_header"></h1>
                 <h2 id="drill_down_db_name"></h2>
 
-                <div class="row col-10">
-                    <div class="results_divs col-5 m-2">
-                        <h2 id="drill_down_function_name"></h2>
-                    </div>
-                    <div class="results_divs col-5 m-2">
-                        <h2 id="drill_down_run_id"></h2>
-                    </div>
-                </div>
-                <div class="row col-10">
-                    <div class="results_divs col-5 m-2">
-                        <h2 id="result_status"></h2>
-                    </div>
-                    <div class="results_divs col-5 m-2">
-                        <h2 id="result_text"></h2>
-                    </div>
-                </div>
+                <!-- <div class="row col-10"> -->
+                <!-- <div class="results_divs m-2"> -->
+                <h2 id="drill_down_function_name"></h2>
+                <!-- </div> -->
+                <!-- <div class="results_divs m-2"> -->
+                <h2 id="drill_down_run_id"></h2>
+                <!-- </div> -->
+                <!-- </div> -->
+                <!-- <div class="row col-10"> -->
+                <!-- <div class="results_divs m-2"> -->
+                <h2 id="result_status"></h2>
+                <!-- </div> -->
+                <!-- <div class="results_divs m-2"> -->
+                <h2 id="result_text"></h2>
+                <!-- </div> -->
+                <!-- </div> -->
 
             </div>
 
         </div>
-        <div class="col-8" id="drill_down_table_div">
-            <table id="drill_down_table">
-
-            </table>
-        </div>
 
     </div>
-    <br>
-    <br>
-    <br>
-    <br> {% endblock %} {% block scripts %}
-    <!-- <script src="../static//js/jquery_3_4_1_min.js"></script> -->
-    <script src="../static/js/run_simple.js"></script>
-    <script src="../static/js/display_results.js"></script>
-    <!-- <script src="../static/js/draggble_list.js"></script> -->
+    <div class=" col-8" id="drill_down_table_div">
+        <table id="drill_down_table">
 
-    {% endblock %}
+        </table>
+    </div>
+</div>
+<br>
+
+<br>
+<br>
+<br> {% endblock %} {% block scripts %}
+<!-- <script src="../static//js/jquery_3_4_1_min.js"></script> -->
+<script src="../static/js/run_simple.js"></script>
+<script src="../static/js/display_results.js"></script>
+<!-- <script src="../static/js/draggble_list.js"></script> -->
+
+{% endblock %}
