--- a/Source/templates/Function_Definition.html
+++ b/Source/templates/Function_Definition.html
@@ -2,9 +2,9 @@
 <link rel="stylesheet" href="{{url_for('static',filename='css/fontawesome/css/all.css')}}" />
 <link rel="stylesheet" href="../static/css/draggable_list.css">
 <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
-<link rel="stylesheet" href="../static/css/run_stage_definition.css" />
+<link rel="stylesheet" href="../static/css/metadata_layout.css" />
+<link rel="stylesheet" href="../static/css/Function_Definition_Modal.css" />
 <link rel="stylesheet" href="../static/css/styles.css" /> {% endblock %} {%block content%}
-
 
 
 
@@ -171,30 +171,7 @@
                   <option value="group3">group3</option>
                 </datalist>
                 <ul name= "GroupsListNames" id="GroupsList">
-                    <!-- <li>group1</li>
-                    <li>group2</li>
-                    <li>group3</li>
-                    <li>group4</li>
-                    <li>group1</li>
-                    <li>group2</li>
-                    <li>group3</li>
-                    <li>group4</li>
-                    <li>group1</li>
-                    <li>group2</li>
-                    <li>group3</li>
-                    <li>group4</li>
-                    <li>group1</li>
-                    <li>group2</li>
-                    <li>group3</li>
-                    <li>group4</li>
-                    <li>group1</li>
-                    <li>group2</li>
-                    <li>group3</li>
-                    <li>group4</li>
-                    <li>group1</li>
-                    <li>group2</li>
-                    <li>group3</li>
-                    <li>group4</li> -->
+
                 </ul>
             </div>
         </div>
@@ -265,7 +242,7 @@
         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLongTitle">Define Group</h5>
+              <h5 class="modal-title ml-auto" id="exampleModalLongTitle">Define Group</h5>
 
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
@@ -273,55 +250,71 @@
             </div>
             <div class="modal-body" id=ModalGroupBody>
               <div  id="analyse_stage_div">
-                <div class="form-inline">
-                  <h2 class="mx-auto stage-headline displayInline">Analyse Stage</h2>
-                  <!-- <a href="" role="button" class = "displayInline medium-margin-right medium-icon" ><i class="fas fa-check-circle green-control"></i></a> -->
+
+                <div class="row mx-auto layout-buttons-div">
+                    <input id = "Group_toggle" type="checkbox" checked data-toggle="toggle" data-on="New" data-off="Existing" data-onstyle="primary" data-offstyle="secondary" data-width="80">
+                    <button id = "Save_Group" aria-label="Save"><i class="far fa-save normal-size" ></i></button>
+                    <button id = "Duplicate_Group"><i class="far fa-file-alt adapt-icon-size"></i></button>
+                    <button id = "Delete_Group"><i class="far fa-trash-alt adapt-icon-size"></i></button>
                 </div>
-                <hr>
-                <div class="row mr-3">
-                  <div class="col-5">
-                    <input class="display-block" type="checkbox" checked data-toggle="toggle" data-on="Group" data-off="Function" data-style="ios">
-                    <!-- <h1>Select a group</h1> -->
-                    <div class="list" >
-                      <div>
-                        <input list='some_datalist' type="text" class="input form-control" placeholder="Add a group to your list"/>
-                        <div class="add"><input class="btn btn-sm btn-primary" type="button" value="add"></div>
+                <div class="form-inline seperate-row" >
+                  <label for="Modal_Select_Group_Name" class = "modal-fix-width-label" ><h5>Group Name:</h5></label>
+                  <input list='Group_Function_Name' id = "Modal_Select_Group_Name" type="text" class="input form-control GroupOrFunction_Name" placeholder="..."/>
+                </div>
+                    <datalist id='Group_Function_Name'>
+                        <option value="data1"></option>
+                        <option value="data3"></option>
+                        <option value="data4"></option>
+                        <option value="data2"></option>
+                    </datalist>
+
+                <div class="row seperate-row">
+                  <div class "col-7">
+
+                        <div class="form-inline">
+                          <label for="Group_funciton_toggle" class = "lable-Toggle-Function_Or_Group-Modal" ><h6>Add &nbsp</h6></label>
+                          <input class="display-block" type="checkbox" id="Group_funciton_toggle" checked data-toggle="toggle" data-on="Function" data-off="Group" data-onstyle="default" data-width="100">
+                          <label for="Group_funciton_toggle" class = "label-adition-modal" ><h6>&nbsp to your list: </h6></label>
+                        </div>
+
+                      <div class="list" >
+                          <div>
+                            <input list='some_datalist' id = "Modal_Group_Name" type="text" class="input form-control Modal_GroupFunctionName_Select" placeholder="Select"/>
+                            <div class="add"><input class="btn btn-sm btn-secondary" type="button" value="add"></div>
+                          </div>
+                            <datalist id='some_datalist'>
+                                <option value="data1"></option>
+                                <option value="data3"></option>
+                                <option value="data4"></option>
+                                <option value="data2"></option>
+                            </datalist>
                       </div>
-                        <datalist id='some_datalist'>
-                            <option value="data1"></option>
-                            <option value="data3"></option>
-                            <option value="data4"></option>
-                            <option value="data2"></option>
-                        </datalist>
                     </div>
-                  </div>
-                  <div class="col-1 seperators-div">
-                    <i class="fas fa-circle seperator"></i>
-                    <i class="fas fa-circle seperator"></i>
-                    <i class="fas fa-circle seperator"></i>
-                  </div>
-                  <div class="col-5 mx-auto">
-                    <label for="chosen_list" class="draagable-ul-title"><h5>Chosen list:</h5></label>
-                    <ul class='draggble_ul list-div' id="chosen_list">
-                        <li class="draggable" draggable="true">HTML</li>
-                        <li class="draggable" draggable="true">CSS</li>
-                        <li class="draggable" draggable="true">JavaScript</li>
-                        <li class="draggable" draggable="true">PHP</li>
-                        <li class="draggable" draggable="true">MySQL</li>
-                    </ul>
-                  </div>
-                  <div class="col-1">
-                    <a href="" role="button" class="drag_to_remove"><i class="far fa-trash-alt"></i></a>
-                  </div>
+
+                      <div class="col-1 seperators-div">
+                          <i class="fas fa-circle seperator"></i>
+                          <i class="fas fa-circle seperator"></i>
+                          <i class="fas fa-circle seperator"></i>
+                      </div>
+
+                      <div class="col-5 mx-auto">
+                        <label for="chosen_list" class="draagable-ul-title"><h5>Chosen list:</h5></label>
+                        <ul class='draggble_ul list-div' id="chosen_list">
+                            <li class="draggable" draggable="false">HTML</li>
+                            <li class="draggable" draggable="false">CSS</li>
+                            <li class="draggable" draggable="false">JavaScript</li>
+                            <li class="draggable" draggable="false">PHP</li>
+                            <li class="draggable" draggable="false">MySQL</li>
+                        </ul>
+                      </div>
+
+                    </div>
                 </div>
               </div>
 
 
             </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-              <button type="button" class="btn btn-primary" data-dismiss="modal" id=confirm_delete_button>Apply</button>
-            </div>
+
           </div>
         </div>
       </div>
@@ -331,6 +324,7 @@
 {%block scripts%}
 <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 <script src="../static/js/draggble_list.js"></script>
-<script src="../static//js/Functions_Definitions.js"></script>
+<script src="../static/js/OctoUtils.js"></script>
+<script src="../static/js/Functions_Definitions.js"></script>
 
 {%endblock%}
