function definition groups + status + feature

--- a/Source/static/css/metadata_layout.css
+++ b/Source/static/css/metadata_layout.css
@@ -18,6 +18,11 @@
     margin-bottom: 20px;
 }
 
+.layout-buttons-div button{
+    background-color: white;
+    border: none;
+}
+
 .normal-size{
     font-size: 2.5rem;
     margin-left: 20px;
