--- a/Source/templates/Function_Definition.html
+++ b/Source/templates/Function_Definition.html
@@ -69,7 +69,7 @@
                     </div>
                     <div class="function-input-row col-3">
                         <label><strong>Status</strong></label>
-                        <select class="form-control" type="text" name="Status">
+                        <select class="form-control" type="text" name="status">
                           <option value="Needed">Needed</option>
                           <option value="In Dev">In Dev</option>
                           <option value="Complete">Complete</option>
@@ -79,7 +79,7 @@
                 <div class="row">
                     <div class="function-input-row col-3">
                         <label>Feature</label>
-                        <input class="form-control" type="text" name="features"></input>
+                        <input class="form-control" type="text" name="feature"></input>
                     </div>
                     <div class="function-input-row col-3">
                         <label>Requirement</label>
