--- a/Source/static/css/draggable_list.css
+++ b/Source/static/css/draggable_list.css
@@ -48,9 +48,9 @@ body ul {
 body ul .draggable {
     will-change: transform;
     font-family: "Raleway", sans-serif;
-    font-weight: 800;
+    /* font-weight: 800; */
     /* height: 40px; */
-    list-style-type: decimal;
+    list-style-type: disc;
     margin: 10px;
     /* background-color: white; */
     color: #212121;
