--- a/Source/static/css/styles.css
+++ b/Source/static/css/styles.css
@@ -203,7 +203,7 @@ input::-webkit-calendar-picker-indicator {
 }
 
 #input_parameters button {
-    /* background-color: #e8f9e9; */
+    background-color: #e8f9e9;
     border-style: none;
     /* border-radius: 50%; */
 }
@@ -230,14 +230,24 @@ input::-webkit-calendar-picker-indicator {
 #GroupsList {
     position: relative;
     height: 300px;
-    width: 150px;
+    margin-left: 30px;
+
     /* overflow-y: scroll; */
 }
+
+#GroupsList div{
+  width: 130px;
+  font-weight: normal;
+}
+
 
 .input-groups-data label {
     margin-left: 7px;
 }
 
+.group{
+  width: 150px;
+}
 
 /*
 .input-form {
